--- a/content/config.yml
+++ b/content/config.yml
@@ -3,15 +3,15 @@
 # -----------------------------------------------------------------------------
 
 title: # the website title (if blank, full name will be used instead)
-first_name: You 
-middle_name: R.
-last_name: Name 
+first_name: Diego
+middle_name: A.
+last_name: Barriga Martínez
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: Design based on al-folio adapted for Pelican. 
 keywords: physics, mathematics 
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+lang: es # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 # For both fields below, do not include leading / trailing slashes. 
@@ -62,12 +62,12 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-email: 
-github_username: test
-gitlab_username: test
-twitter_username: test 
-mastodon_username: test 
-linkedin_username: test 
+email: dbarriga@ciencias.unam.mx
+github_username: umoqnier
+gitlab_username:
+twitter_username: 
+mastodon_username: mstdn.mx/@umoqnier
+linkedin_username: dbarrigam
 telegram_username: 
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
