--- a/content/data/cv.yml
+++ b/content/data/cv.yml
@@ -2,70 +2,69 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Diego Alberto Barriga Martínez
     - name: Date of Birth
-      value: 14th March 1879
+      value: 22th April 1995
     - name: Languages
-      value: English, German
+      value: Spanish (Native), English (C1)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Computer Engineering Bachelor's Degree
+      institution: National Autonomous University of Mexico, México
+      year: 2014-2019
       description:
-        - Desc.elements.
-        - Description 2.
-        - title: Description 3.
+        - <b>Specialization:</b> Artificial Intelligence and Computer Graphics
+        - title: Thesis
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+            - Etiquetador automático de la morfología del otomí usando predicción estructurada
+        - title: Advisors
+          contents:
+            - Dr. Victor Mijangos de la Cruz
+            - Dra. Ximena Gutierrez-Vasques
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Teaching Assistant Professor
+      institution: Data Science Bachelor, Applied Mathematics and Systems Research Institute, UNAM
+      year: 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - <i>Selected Themes on Natural Language Processing</i>
+        - title: Responsabilities
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - Conduct <a href="https://github.com/umoqnier/st-cl-2025-2-lab">laboratory practices</a>
+            - Design practices based on NLP theory concepts
+            - Resolve representative NLP tasks
+    - title: Teaching Assistant Professor
+      institution: School of Science, UNAM
+      year: 2021-2025
       description:
-        - Description 1.
-        - Description 2.
+          - <a href="https://github.com/umoqnier/cl-2024-2-lab">Computer Linguistics (2024-2)</a>
+          - <a href="https://github.com/umoqnier/cl-2024-1-lab">Computer Linguistics (2024-1)</a>
+          - Operating Systems
+          - Computer Networks
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: MLOps Engineer
+      institution: Mercado Libre
+      year: 2021-2024
       description:
+        - Developed, maintained, and migrated microservices to monitor health and anomalies for machine learning models at a significant scale, including models with millions of parameters and extensive datasets.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Free Software Dev
+      institution: Elotl Community
+      year: 2019-now
+      description:
+        - Natural language processing and generation of digital resources for Mexico's vast linguistic diversity. We disseminate linguistic, social, and technological issues related to Mexican languages.
 
-- title: Open Source Projects
+
+- title: Free Software Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
+    - title: <a href="">Esquite</a>
+      maindescription: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="">Py-elotl</a>
       maindescription: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
