--- a/content/config.yml
+++ b/content/config.yml
@@ -16,7 +16,7 @@ icon: 🌽 # the emoji used as the favicon (alternatively, provide image name in
 
 # For both fields below, do not include leading / trailing slashes. 
 url: https://umoqnier.github.io # the base hostname & protocol for your site
-baseurl: cv-page
+baseurl:
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
